Version 2.2.4-dev
21-2-2015

[Updated] - Fix Error-prone


Version 2.2.3
16-2-2015

[Updated] - Fix slpkg.SlackBuild script support .zip archives.
          - Fix can't overwrite new sbo scripts.
          - Fix remove master package with dependencies.

Version 2.2.2
11-2-2015

[Updated] - BugFix show hidden matching sbo packages.


Version 2.2.1
6-2-2015

[Feature] - Added support multipackages.
          - Added passing variables to the script.
          - Added use file.pkg instead [package...] or [package].

[Updated] - Fix [key error] when you enter wrong name repository as default.
          - Rename BUILD variable to BUILD_PATH in configuration file slpkg.conf.
          - Fix fails install if modified OUTPUT variable.
          - Change in view list of packages in option '-l'.
          - Update option '-f' view installed packages.
          - Update option '-l' view installed packages.

Version 2.2.0
08-1-2015

[Updated] - Fix queue downloads.
          - Update find argument.
          - Rename commands repolist and repoinfo to repo-list, repo-info.
          - Update installed package list.

[Feature] - Added custom binary repository.
          - Added Slackware 'patches' repository in PACKAGES.txt file.
          - Added Alien's restricted repository.
          - Added wget option.
          - Added view default repositories in repo-list.

Version 2.1.5
27-12-2014

[Feature] - Added slacker.it, slackonly.com, Alien's ktown, Alien's multilib,
            Slacke E17 and E18, SalixOS and Slackel repositories.
          - Added command 're-create'.
          - Added command 'repolist'.
          - Added command 'repoinfo'. 

[Updated] - Fix Slackware current upgrade checksums.
          - Fix ingore hiden files in /var/log/packages/ path.
          - Fix arguments.

Version 2.1.4
16-12-2014

[Feature] - Added command 'update' and remove auto update package lists.
          - Added slpkg update itself.
